test/custom/inference/good/typeclass_annotated_predicate.mle
class H 'a { h : 'a }
class H 'a => I 'a { i : 'a }
let ['a 'b] [ I 'b ] (f : 'a -> 'b) = ['a 'b] fun (x : 'a) -> h['b]