test/custom/inference/bad/typeclass_unbound.mle
class K 'a => L 'a { x : 'a }
class L 'a => K 'a { y : 'a }
let (f : int) = x[int]